# Parallel_Computing

./: .gitignore
1_lab/: CMakeLists.txt  README.md  main.cpp
2_Lab/: CMakeLists.txt  matrix.cpp  matvec_omp  matvec_omp.cpp
2_Lab/1_task/: .gitignore  CMakeLists.txt  bench.sh  matrix  matrix.cpp  matvec_N20000  matvec_N40000  openmp_scalability_with_chart.xlsx  plot_from_xlsx.py  results.csv  tempCodeRunnerFile.py  ~$openmp_scalability_with_chart.xlsx
2_Lab/2_task/: CMakeLists.txt  matrix.cpp  plot.py  results.csv
2_Lab/3_task/: 1_var.cpp  2_var.cpp  CMakeLists.txt  plot.py
2_Lab/3_task/results/: lab2_var1_threads.csv  lab2_var2_threads.csv
3_Lab/1_task/: CMakeLists.txt  matrix.cpp  plot.py  results.csv
3_Lab/2_task/: CMakeLists.txt  main.cpp  server.hpp
